Fixed page overflow

--- a/client/src/components/NavTabs/NavTabs.css
+++ b/client/src/components/NavTabs/NavTabs.css
@@ -18,7 +18,7 @@
   
   .container {
     z-index: 1;
-    width: 100%;
+    /* width: 100%; */
     max-width: 1300px;
     margin-right: auto;
     margin-left: auto;
