--- a/client/src/components/StaffCard/StaffCard.css
+++ b/client/src/components/StaffCard/StaffCard.css
@@ -12,7 +12,7 @@
     /* margin: 1em 0 1em 0; */
     max-width: 300px;
     max-height: 300px;
-    border-radius: 100%;
+    border-radius: 50%;
     margin-top: 5em
     
 }
